<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_input_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    app:layout_constraintHeight_default="wrap"
    tools:context=".UserInput">


    <TextView
        android:id="@+id/instruction"
        android:layout_width="327dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:layout_marginBottom="29dp"
        android:text="@string/description_string"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/numbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numbers"
        android:layout_width="253dp"
        android:layout_height="0dp"
        android:layout_below="@id/instruction"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/your_numbers"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/numbers"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/select_method"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sortingMethodRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbers" />

    <RadioGroup
        android:id="@+id/sortingMethodRadioGroup"
        android:layout_width="143dp"
        android:layout_height="110dp"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/bubbleSortRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="17dp"
            android:buttonTint="#FFFFFF"
            android:checked="true"
            android:shadowColor="#FFFFFF"
            android:text="@string/bubble_sort"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/quickSortRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:minHeight="48dp"
            android:text="@string/quick_sort"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="12sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>